# plane-bot

./: Cargo.toml  Procfile  README.md  RustConfig  help.md
commands/: help.md  index.json
public/: wakeup.html
src/: command_parser.rs  main.rs  search.rs
src/command_parser/: add_command.rs  delete_command.rs  eval_command.rs  help_command.rs  random_commands.rs  run_command.rs  search.rs
