[package]
name = "plane_bot"
version = "0.1.0"
authors = ["diode"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
meval = "0.2"
rand = "0.7"
tiny_http = "0.6"
ureq = { version = "*", features = ["json", "charset","tls"] }
serde_json = "1.0"