[package]
name = "plane_bot"
version = "0.1.0"
authors = ["diode"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
meval = "0.2.0"
rand = "0.7.3"
tiny_http = "0.7.0"
ureq = { version = "1.3.0", features = ["json", "charset","tls"] }
serde_json = "1.0.56"
lazy_static="1.4.0"
